IMPALA-412: Impala might hang when an impalad dies during query execution

Allows queries to be cancelled while fetching rows and fixes some test bugs.